updated add , redo , undo

--- a/bin/.project
+++ b/bin/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SparkMoVare</name>
+	<name>SparkMoWare</name>
 	<comment></comment>
 	<projects>
 	</projects>
