--- a/.classpath
+++ b/.classpath
@@ -16,5 +16,6 @@
 	<classpathentry kind="lib" path="resource/GUI classes/org.eclipse.text_3.5.300.v20130515-1451.jar"/>
 	<classpathentry kind="lib" path="resource/GUI classes/org.eclipse.ui.forms_3.6.100.v20140422-1825.jar"/>
 	<classpathentry kind="lib" path="resource/GUI classes/org.eclipse.ui.workbench_3.106.0.v20140530-0732.jar"/>
+	<classpathentry kind="src" path="/SparkMoVareMarkII"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
